Add login, better logo

--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="signup-header" class="box">
-            <img class="logo" src="yfitops.png">
+            <img class="logo" src="yfitops_header.png">
             <button type="button" id="header-signup" class="m-4 btn btn-primary">Log in</button>
         </div>    
 
