--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
+        <meta charset="UTF-8"> 
     </head>
     <body>
         <div id="login-box" class="container">
-            <img id="main-logo" src="yfitops.png">
-            <button type="button" class="m-3 btn btn-primary">Signup</button>
-            <button type="button" class="m-3 btn btn-primary">Login</button>
+            <img id="main-logo" src="yfitops.jpg">
+            <button id="home-signup" type="button" class="m-3 btn btn-primary">Sign up</button>
+            <button id="home-login" type="button" class="m-3 btn btn-primary">Log in</button>
         </div>
         
     </body>
