Add New Navigation, Login Functionalities

--- a/discover.html
+++ b/discover.html
@@ -22,17 +22,28 @@
         </div>
 
         <div class="my-3 container profile-text text-center">
-            Artists
+            Just for You
         </div>
 
-        <div id="artists-container" class="d-flex container main-container">
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
+        <div id="songs-container" class="d-flex container main-container box">
+            <div class="song">
+                <div class="song-title">Test title</div>
+                <div class="song-artist">Test artist</div>
+                <div class="song-album">Test album</div>
+                <div class="song-genre">Test genre</div>
+            </div>
+            <div class="song">
+                <div class="song-title">Test title</div>
+                <div class="song-artist">Test artist</div>
+                <div class="song-album">Test album</div>
+                <div class="song-genre">Test genre</div>
+            </div>
+            <div class="song">
+                <div class="song-title">Test title</div>
+                <div class="song-artist">Test artist</div>
+                <div class="song-album">Test album</div>
+                <div class="song-genre">Test genre</div>
+            </div>
         </div>
     </body>
 </html>
