--- a/friends.html
+++ b/friends.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="my-3 container profile-text text-center">
-            Artists
+            Your Friends
         </div>
 
         <div id="artists-container" class="d-flex container main-container">
