--- a/playlists.html
+++ b/playlists.html
@@ -22,17 +22,17 @@
         </div>
 
         <div class="my-3 container profile-text text-center">
-            Artists
+            Your Playlists
         </div>
 
         <div id="artists-container" class="d-flex container main-container">
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
-            <div class="m-4 artist box">Text box</div>
+            <div class="m-4 playlist box">Text box</div>
+            <div class="m-4 playlist box">Text box</div>
+            <div class="m-4 playlist box">Text box</div>
+            <div class="m-4 playlist box">Text box</div>
+            <div class="m-4 playlist box">Text box</div>
+            <div class="m-4 playlist box">Text box</div>
+            <div class="m-4 playlist box">Text box</div>
         </div>
     </body>
 </html>
