added sql and php for main lib

--- a/discover.html
+++ b/discover.html
@@ -9,9 +9,9 @@
     <body>
         <div class="header">
             <img class="header-logo" src="yfitops_header.jpg">
-            <div class="container header-text text-center">Library</div>
-            <button type="button" id="header-profile" class="m-4 btn btn-primary">Profile</button>
-            <button type="button" id="header-logout" class="my-4 mx-1 btn btn-primary">Log Out</button>
+            <div class="container header-text text-center">Profile</div>
+            <button type="button" id="header-profile" class="m-4 btn btn-primary header-nav">Profile</button>
+            <button type="button" id="header-logout" class="my-4 mx-1 btn btn-primary header-nav">Log Out</button>
         </div>
 
         <div class="left-header">
@@ -21,67 +21,29 @@
             <button type="button" id="friends-btn" class="m-4 btn btn-primary header-btn">Friends</button>
         </div>
 
-        <div id="songs-container" class="d-flex container main-container box">
-            <div class="song">
-                <div class="song-title">Title</div>
-                <div class="song-artist">Artist</div>
-                <div class="song-album">Album</div>
-                <div class="song-genre">Genre</div>
-            </div>
-<!--            <div class="song">
-                <div class="song-title">Test title</div>
-                <div class="song-artist">Test artist</div>
-                <div class="song-album">Test album</div>
-                <div class="song-genre">Test genre</div>
-            </div>
-            <div class="song">
-                <div class="song-title">Test title</div>
-                <div class="song-artist">Test artist</div>
-                <div class="song-album">Test album</div>
-                <div class="song-genre">Test genre</div>
-			</div> -->
+        <div class="my-3 container profile-text text-center">
+            Just for You
         </div>
 
-
-
-<div id="dom-target"  style="display: none;" > 
-<?php
-	include 'connectvars.php'; 
-
-
-	
-	$conn = mysqli_connect(DB_HOST, DB_USER, DB_PASSWORD, DB_NAME);
-	if (!$conn) {
-		die('Could not connect: ' . mysql_error());
-	}
-		
-	$query = "SELECT s.SongName , s.Album, s.Artist, s.Genre FROM Song s";
-	
-
-	$result = mysqli_query($conn, $query);
-	
-	if (!$result) {
-		die("Query to show fields from table failed");
-	}
-	
-// get number of columns in table	
-	$fields_num = mysqli_num_fields($result);
-	
-	while($row = mysqli_fetch_row($result)) {
-		$a = array();	
-		foreach($row as $cell)		
-			array_push($a, $cell);
-
-		$cs = implode("," , $a);
-		echo htmlspecialchars($cs); 
-		echo "<script>insertSongMainLib()</script>";
-		
-
-//		echo "<script> insertSong(json_encode($a[0]), 'a thing','another thing' , 'more things')</script>";
-	}
-
-	mysqli_free_result($result);
-	mysqli_close($conn);
-?>
+        <div id="songs-container" class="d-flex container main-container box">
+            <div class="song">
+                <div class="song-title">Test title</div>
+                <div class="song-artist">Test artist</div>
+                <div class="song-album">Test album</div>
+                <div class="song-genre">Test genre</div>
+            </div>
+            <div class="song">
+                <div class="song-title">Test title</div>
+                <div class="song-artist">Test artist</div>
+                <div class="song-album">Test album</div>
+                <div class="song-genre">Test genre</div>
+            </div>
+            <div class="song">
+                <div class="song-title">Test title</div>
+                <div class="song-artist">Test artist</div>
+                <div class="song-album">Test album</div>
+                <div class="song-genre">Test genre</div>
+            </div>
+        </div>
     </body>
 </html>
